--- a/abstract.tex
+++ b/abstract.tex
@@ -8,7 +8,7 @@ The proposed method employs an algorithm that averages out the dominant colour o
 As for the motion of the vehicles, the proposed method compiles the relative position/location of each vehicles into trajectory sets. In this work, the timestamp information as well as the object size along with the object types were also extracted. A spatio-temporal cube design was adopted to uniquely identify each video footage so that the extracted information can be stored while maintaining the ability to identify them.  
 
 Next, the second contribution of this work is the construction of a retrieval engine which is used to retrieve video shots based on the given semantics which were extracted. This work proposed an unconventional yet intuitive trajectory input in the form of user-described trajectory drawn on the search canvas. 
-The other semantics (colour \& timestamp information) were given as keyword-based inputs for the proposed method to locate and rank video shots based on its similarity. 
+The other semantics (colour and timestamp information) were given as keyword-based inputs for the proposed method to locate and rank video shots based on its similarity. 
 %As with any large scale retrieval engine, collecting all the ground truth data is not a viable option. Therefore, 
 The proposed method is then tested against semantics extracted from a month's worth of data 
 %under various lighting and weather conditions 
