--- a/llt.bib
+++ b/llt.bib
@@ -401,6 +401,15 @@
   publisher={Springer}
 }
 
+@inproceedings{saunier2006feature,
+  title={A feature-based tracking algorithm for vehicles in intersections},
+  author={Saunier, Nicolas and Sayed, Tarek},
+  booktitle={The 3rd Canadian Conference on Computer and Robot Vision (CRV'06)},
+  pages={59--59},
+  year={2006},
+  organization={IEEE}
+}
+
 
 
 % ----- LIT REVIEW END -----
@@ -460,6 +469,33 @@ url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
   publisher={IEEE}
 }
 
+@article{bhaumik2016hybrid,
+  title={Hybrid soft computing approaches to content based video retrieval: A brief review},
+  author={Bhaumik, Hrishikesh and Bhattacharyya, Siddhartha and Nath, Mausumi Das and Chakraborty, Susanta},
+  journal={Applied Soft Computing},
+  volume={46},
+  pages={1008--1029},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@InProceedings{Cheng_2013_ICCV,
+author = {Cheng, Ming-Ming and Warrell, Jonathan and Lin, Wen-Yan and Zheng, Shuai and Vineet, Vibhav and Crook, Nigel},
+title = {Efficient Salient Region Detection with Soft Image Abstraction},
+booktitle = {The IEEE International Conference on Computer Vision (ICCV)},
+month = {December},
+year = {2013}
+} 
+
+@article{flickner1995qbic,
+  title={The QBIC system},
+  author={Flickner, Myron and Sawhney, Harpreet and Niblack, Wayne and Ashley, Jonathan and Huang, Qian and Dom, Byron and Gorkani, Monika and Hafner, Jim and Lee, Denis and Petkovic, Dragutin and others},
+  journal={IEEE computer},
+  volume={28},
+  number={9},
+  pages={23--32},
+  year={1995}
+}
 
 
 @article{dehghan2017view,
