--- a/thesis.tex
+++ b/thesis.tex
@@ -9,6 +9,9 @@
 \usepackage{float}
 \usepackage[noend]{algcompatible}
 
+% for the degree symbol
+\usepackage{siunitx}
+
 
 \usepackage[x11names,dvipsnames,svgnames]{xcolor}
 \usepackage[os=win]{menukeys}
